some slight changes

--- a/base/templates/contact_list.html
+++ b/base/templates/contact_list.html
@@ -16,7 +16,7 @@
 
       <li>
         <img
-          src="/static/{{contacts.avatar.url}}"
+          src="/static{{contacts.avatar.url}}"
           alt=""
           class="contact-avatar"
         /><a href="{% url 'contacts' contacts.id %}">{{contacts.first_name}}</a> 
