--- a/base/templates/favourites_component.html
+++ b/base/templates/favourites_component.html
@@ -6,7 +6,7 @@
 {% if contact.favourites == True%}
       <li>
         <img
-          src="/static/{{contact.avatar.url}}"
+          src="/static{{contact.avatar.url}}"
           alt=""
           class="contact-avatar"
         /><a href="{% url 'contacts' contact.id %}">{{contact.first_name}}</a> 
